deploy/manifests/saasbackup/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saasbackup-${VERSIONS_TAG}
  labels:
    app: saasbackup-${VERSIONS_TAG}
  namespace: pxdocs-saasbackup
spec:
  replicas: 3
  selector:
    matchLabels:
      app: saasbackup-${VERSIONS_TAG}
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: saasbackup-${VERSIONS_TAG}
    spec:
      containers:
        - name: nginx
          image: ${DEPLOYMENT_IMAGE}
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            timeoutSeconds: 1
