deploy/manifests/saasbackup/service-template.yaml
apiVersion: v1
kind: Service
metadata:
  name: saasbackup-${VERSIONS_TAG}
  namespace: pxdocs-saasbackup
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    name: saasbackup-port
  selector:
    app: saasbackup-${VERSIONS_TAG}
