deploy/manifests/saasbackup/saasbackup-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Enter your credentials to access the PX-Backup-as-a-service beta.'
  name: saasbackup-ingress
  namespace: pxdocs-saasbackup
spec:
  rules:
  - host: baas.docs.portworx.com
    http:
      paths:
      - backend:
          service:
            name: saasbackup-1-0
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - baas.docs.portworx.com
    secretName: ingress-pxdocs-saasbackup-tls
